background color changed

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,7 +12,7 @@ $mainGrey: #ececec;
 
 
 body {
-    //background: $mainGrey;
-    //color: $mainGreen;
+    background: $mainGreen;
+    color: $mainBlack;
     font-family: 'Open Sans', sans-serif; 
 }
